--- a/package.json
+++ b/package.json
@@ -16,6 +16,14 @@
   ],
   "author": "Waqas Bakht",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.2",
+    "express-fileupload": "^0.4.0",
+    "ffi": "^2.3.0",
+    "http": "0.0.0",
+    "javascript-obfuscator": "^0.14.3",
+    "nodemon": "^1.18.10"
+  },
   "bugs": {
     "url": "https://github.com/bakhtw1/wbportfolio/issues"
   },
