--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "debug": "node --nolazy --inspect-brk=9229 app.js"
+    "debug": "nodemon --inspect-brk=33994 app.js"
   },
   "repository": {
     "type": "git",
