UIkit Changes, Drop Bootstrap

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,10 +11,8 @@
             "runtimeExecutable": "npm",
             "runtimeArgs": [
                 "run-script",
-                "debug",
-                "33994"
+                "debug"
             ],
-            "restart": true,
             "port": 33994
         },
         {
