--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "debug": "nodemon --inspect-brk=33994 app.js"
+    "debug": "nodemon --inspect-brk=33994 app.js",
+    "start": "node app.js 3000"
   },
   "repository": {
     "type": "git",
