--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "author": "Waqas Bakht",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
     "ffi": "^2.3.0",
     "http": "0.0.0",
     "javascript-obfuscator": "^0.14.3",
+    "nodemailer": "^6.2.1",
     "nodemon": "^1.18.10"
   },
   "bugs": {
